--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -61,11 +61,14 @@
   .nav_button {
     background-color: $secondary;
     color: $white;
-    font-size: 1.4rem;
     padding: 17px 22px;
     border-radius: 30px;
     display: inline-block;
     cursor: pointer;
+    transition: transform .3s cubic-bezier(.4,.6,.6,1);
+    &:hover {
+      transform: scale3d(1.05,1.05,1.05);
+    }
   }
 }
 
