--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -59,15 +59,16 @@
   }
 
   .nav_button {
+    margin: 3px;
     background-color: $secondary;
     color: $white;
     padding: 17px 22px;
     border-radius: 30px;
     display: inline-block;
     cursor: pointer;
-    transition: transform .3s cubic-bezier(.4,.6,.6,1);
+    transition: transform 0.3s cubic-bezier(0.4, 0.6, 0.6, 1);
     &:hover {
-      transform: scale3d(1.05,1.05,1.05);
+      transform: scale3d(1.05, 1.05, 1.05);
     }
   }
 }
