--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -20,20 +20,33 @@
 .sidebar_wrapper {
   width: 42.5%;
   max-width: 680px;
-  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   background: #fff;
   z-index: 10;
-  box-shadow: 0 10px 25px 2px rgba(150, 150, 150, 10%), 0 10px 80px 5px rgba(150, 150, 150, 10%);
+  box-shadow: 0 10px 25px 2px rgba(150, 150, 150, 10%),
+    0 10px 80px 5px rgba(150, 150, 150, 10%);
   overflow: auto;
+  display: flex;
+  flex-direction: column;
   &.onboard {
-    animation: sidebar_wrapper-onboard 1.4s cubic-bezier(.2,1,.2,1);
+    animation: sidebar_wrapper-onboard 1.4s cubic-bezier(0.2, 1, 0.2, 1);
     animation-fill-mode: both;
   }
   &.exit {
-    animation: sidebar_wrapper-exit 1.4s cubic-bezier(.2,1,.2,1);
+    animation: sidebar_wrapper-exit 1.4s cubic-bezier(0.2, 1, 0.2, 1);
     animation-fill-mode: both;
   }
+}
+
+.sidebar-close {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  background: url(https://www.codigo.co/img/ui/btn-close.svg);
+  border-radius: 50%;
+  cursor: pointer;
 }
