--- a/src/App.scss
+++ b/src/App.scss
@@ -103,3 +103,12 @@ p {
   clear: both;
   display: table;
 }
+
+a, a:active, a:focus, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.sidebar__wrapper {
+  max-height: calc(100vh);
+}
