--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,8 +3,9 @@ $white: #fff;
 $dark: #1f1f1f;
 $red: #d5333e;
 $darkgray: darkgray;
-$lightgray: lightgray;
+$lightgray: #fafafa;
 
+$maxWidth: 1400px;
 
 .color--red {
   color: $red;
