--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -21,7 +21,8 @@
   width: 42.5%;
   max-width: 680px;
   height: 100%;
-  position: absolute;
+  max-height: 100vh;
+  position: fixed;
   top: 0;
   right: 0;
   background: #fff;
@@ -44,7 +45,7 @@
 .sidebar-close {
   width: 50px;
   height: 50px;
-  position: absolute;
+  position: fixed;
   top: 30px;
   right: 50px;
   background: url(https://www.codigo.co/img/ui/btn-close.svg);
