--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,9 +4,17 @@ $dark: #1f1f1f;
 $red: #d5333e;
 $darkgray: darkgray;
 $lightgray: #fafafa;
+$black: #000;
 
 $maxWidth: 1400px;
 
 .color--red {
   color: $red;
+}
+
+.color--black {
+  color: $black !important;
+  * {
+    color: $black;
+  }
 }
