--- a/src/assets/styles/views/work.scss
+++ b/src/assets/styles/views/work.scss
@@ -209,6 +209,7 @@
 }
 
 .workGrid__gridItem {
+  color: $white;
   animation-name: workGridItem-onboard;
   animation-duration: 0.8s;
   animation-fill-mode: both;
