--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
   border-radius: 10px;
   background: transparent;
   transform: scaleX(-1);
@@ -27,11 +27,12 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: transparent;
+  background: transparent;
+  width: 3px;
   border-radius: 4px;
   &:hover {
     background: $darkgray;
@@ -44,7 +45,7 @@ body {
 
 .scroll {
   &::-webkit-scrollbar-thumb {
-    background: $lightgray;
+    background: $darkgray !important;
   }
 }
 
