--- a/src/assets/styles/ctaForm.scss
+++ b/src/assets/styles/ctaForm.scss
@@ -84,8 +84,8 @@
   margin-right: 3%;
   margin-bottom: 20px;
   display: flex;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   font-size: 100%;
 }
 
