--- a/src/assets/styles/views/work.scss
+++ b/src/assets/styles/views/work.scss
@@ -313,8 +313,8 @@
 }
 
 .workGrid__gridItem:hover .workGrid__bgImg {
-  transform: scale3d(1.1,1.1,1.1);
-  opacity: .85;
+  transform: scale3d(1.1, 1.1, 1.1);
+  opacity: 0.85;
 }
 
 .workGrid__IcoPlatforms {
@@ -346,4 +346,76 @@
 
 .workGrid__IcoPlatforms:not(:last-child) {
   margin-right: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+  .WorkFilterAndLegend__mainGridWrapper.WorkFilterAndLegend--isHorizontal {
+    -ms-grid-columns: 100%;
+    grid-template-columns: 100%;
+    -ms-grid-rows: 50px min-content 55px min-content 50px;
+    grid-template-rows: 50px -webkit-min-content 55px -webkit-min-content 50px;
+    grid-template-rows: 50px min-content 55px min-content 50px;
+  }
+
+  .WorkFilterAndLegend__mainGridWrapper.WorkFilterAndLegend--isHorizontal
+    .workLegend__mainWrapper {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 4;
+    grid-row: 4;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .workGrid__mainWrapper {
+    -ms-grid-columns: 33.33333% 1/3%;
+    grid-template-columns: repeat(3, 33.33333%);
+  }
+
+  .workGrid__gridItem {
+    min-height: 42vw;
+  }
+
+  .workGrid__textCategory_text {
+    font-size: 1.5vw;
+  }
+
+  .workGrid__textProjectTitle_text {
+    font-size: 2.3vw;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .workGrid__mainWrapper {
+    -ms-grid-columns: 50% 50%;
+    grid-template-columns: repeat(2, 50%);
+  }
+
+  .workGrid__textCategory_text {
+    font-size: 2vw;
+  }
+
+  .workGrid__textProjectTitle_text {
+    font-size: 3.5vw;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .workGrid__mainWrapper {
+    -ms-grid-columns: 100%;
+    grid-template-columns: 100%;
+  }
+
+  .footer_trust_wrapper {
+    flex-direction: column;
+    div {
+      width: 100% !important;
+      border-right: none;
+      margin: 15px 0;
+    }
+  }
+
+  .trusts__itemWrapper {
+    border-bottom: 1px solid $darkgray;
+  }
 }
