--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,11 @@ a, a:active, a:focus, a:hover {
   max-height: calc(100vh);
 }
 
+ol, ul {
+  list-style: none;
+  margin: 0;
+}
+
 // mobile
 @media only screen and (max-width: 600px) {
   .sm-hide {
